minor edits in: - added z-index to dropdown menu to prevent overlapping. - fixed admin layout text in area fields.

--- a/style.css
+++ b/style.css
@@ -197,11 +197,12 @@ body {
     border: 1px solid #b2aea8;
 }
 
-.main_menu_dropdown {
+.dropdown-menu {
     width: 60dvw;
     position: fixed;
     top: 15px !important;
     left: -239px !important;
+    z-index: 99999;
 }
 
 .navbar_menu_arrow {
